# pythonaiprojects

./: .gitignore  AGENTS.md
agents/: coder1.toml  coder2.toml  coder3.toml  docs.toml  reviewer.toml  tester.toml
apps/ai-sprint-planner/: README.md  package.json  scaffold.json
apps/ai-sprint-planner/backend/: pyproject.toml
apps/ai-sprint-planner/backend/app/: main.py
apps/ai-sprint-planner/e2e/: smoke.spec.ts
apps/ai-sprint-planner/src/app/: page.tsx
apps/ai-sprint-planner/src/domain/: capacity_planning.ts  dependency_graph.ts  estimation.ts  export.ts  index.ts  ticketing.ts
apps/ai-sprint-planner/src/features/: OverviewPanel.tsx  coreModules.ts
apps/ai-sprint-planner/src/test/: App.test.tsx  dependency-resolution.test.ts
apps/ats-resume-tailor/: README.md  package.json  scaffold.json  vitest.config.ts
apps/ats-resume-tailor/backend/: pyproject.toml
apps/ats-resume-tailor/backend/app/: main.py
apps/ats-resume-tailor/e2e/: smoke.spec.ts
apps/ats-resume-tailor/src/app/: page.tsx
apps/ats-resume-tailor/src/domain/: diff_view.ts  index.ts  keyword_balance.ts  parse_jd.ts  parse_resume.ts  rewrite_engine.ts
apps/ats-resume-tailor/src/features/: OverviewPanel.tsx  coreModules.ts
apps/ats-resume-tailor/src/test/: App.test.tsx  keyword-extraction.test.ts
apps/budget-subscription-detective/: README.md  package.json  scaffold.json
apps/budget-subscription-detective/backend/: pyproject.toml
apps/budget-subscription-detective/backend/app/: main.py
apps/budget-subscription-detective/e2e/: smoke.spec.ts
apps/budget-subscription-detective/src/app/: page.tsx
apps/budget-subscription-detective/src/domain/: anomaly_detection.ts  categorization_rules.ts  csv_import.ts  explainability.ts  (+2 more)
apps/codebase-navigator/: README.md  package.json  scaffold.json
apps/codebase-navigator/backend/: pyproject.toml
apps/codebase-navigator/backend/app/: main.py
apps/codebase-navigator/e2e/: smoke.spec.ts
apps/compliance-linter/: README.md  package.json  pnpm-lock.yaml  scaffold.json  tsconfig.json
apps/compliance-linter/backend/: pyproject.toml
apps/compliance-linter/backend/app/: main.py
apps/compliance-linter/e2e/: smoke.spec.ts
apps/config-doctor/: README.md  package.json  scaffold.json
apps/config-doctor/backend/: pyproject.toml
apps/config-doctor/backend/app/: main.py
apps/config-doctor/e2e/: smoke.spec.ts
apps/content-repurposer/: README.md  package.json  scaffold.json
apps/content-repurposer/backend/: pyproject.toml
apps/content-repurposer/backend/app/: main.py
apps/content-repurposer/e2e/: smoke.spec.ts
apps/incident-commander-sim/: README.md  package.json  pnpm-lock.yaml  scaffold.json
apps/incident-commander-sim/backend/: pyproject.toml
apps/incident-commander-sim/backend/app/: main.py
apps/incident-commander-sim/e2e/: smoke.spec.ts
apps/knowledge-base-builder/: README.md  package.json  scaffold.json
apps/knowledge-base-builder/backend/: pyproject.toml
apps/knowledge-base-builder/e2e/: smoke.spec.ts
apps/learning-path-builder/: README.md  package.json  pnpm-lock.yaml  scaffold.json
apps/learning-path-builder/backend/: pyproject.toml
apps/learning-path-builder/backend/app/: main.py
apps/learning-path-builder/e2e/: smoke.spec.ts
apps/mastery-gradebook/: README.md  package.json  scaffold.json
apps/mastery-gradebook/backend/: pyproject.toml
apps/mastery-gradebook/e2e/: smoke.spec.ts
apps/ops-dashboard/: README.md  package.json  scaffold.json
apps/ops-dashboard/backend/: pyproject.toml
apps/ops-dashboard/e2e/: smoke.spec.ts
apps/personal-crm-followups/: README.md  package.json  scaffold.json
apps/personal-crm-followups/backend/: pyproject.toml
apps/personal-crm-followups/e2e/: smoke.spec.ts
apps/podcast-episode-factory/: README.md  package.json  pnpm-lock.yaml  scaffold.json  vitest.config.ts
apps/podcast-episode-factory/backend/: pyproject.toml
apps/podcast-episode-factory/backend/app/: main.py
apps/podcast-episode-factory/e2e/: smoke.spec.ts
apps/scaled-copies-generator/: README.md  package.json  scaffold.json
apps/scaled-copies-generator/backend/: pyproject.toml
apps/scaled-copies-generator/backend/app/: main.py
apps/scaled-copies-generator/e2e/: smoke.spec.ts
apps/security-practice-tracker/: README.md  next-env.d.ts  package.json  scaffold.json
apps/security-practice-tracker/backend/: pyproject.toml
apps/security-practice-tracker/backend/app/: main.py
apps/security-practice-tracker/e2e/: smoke.spec.ts
apps/smart-meal-planner/: README.md  next.config.ts  package.json  playwright.config.ts  scaffold.json
apps/smart-meal-planner/backend/: pyproject.toml
apps/smart-meal-planner/backend/app/: main.py
apps/smart-meal-planner/e2e/: smoke.spec.ts
apps/spec-to-prototype/: README.md  package.json  scaffold.json
apps/spec-to-prototype/backend/: pyproject.toml
apps/spec-to-prototype/e2e/: smoke.spec.ts
apps/test-suite-generator/: README.md  package.json  scaffold.json
apps/test-suite-generator/backend/: pyproject.toml
apps/test-suite-generator/e2e/: smoke.spec.ts
apps/walkthrough-episode-planner/: README.md  package.json  scaffold.json  vitest.config.ts
apps/walkthrough-episode-planner/backend/: pyproject.toml
apps/walkthrough-episode-planner/backend/app/: main.py
apps/walkthrough-episode-planner/e2e/: smoke.spec.ts
portfolio/showcase-hub/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
portfolio/showcase-hub/e2e/: smoke.spec.ts
portfolio/showcase-hub/scripts/: discover-apps.mjs
(+261 files in other folders)
