[project]
name = "codebase-navigator-backend"
version = "0.1.0"
description = "Index a repo, map architecture, answer "where do I change X?" with citations."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.38",
  "structlog>=25.1.0"
]

[tool.uv]
package = false
