[project]
name = "learning-path-builder-backend"
version = "0.1.0"
description = "Create adaptive weekly plans with spaced repetition and progress tracking."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.38",
  "structlog>=25.1.0"
]

[tool.uv]
package = false
